# CppConcurrencyInAction

./: .gitignore  CMakeLists.txt  LICENSE  README.md  chapter3.cpp  exception_safe_accumulate.cpp  exception_safe_accumulate.h  function_wrapper.h  parallel_algorithm.cpp  parallel_algorithm.h  quicksort_sequential.h  quicksort_test.cpp  quicksort_using_chunk.h  quicksort_using_futures.h  quicksort_using_pool.h  scoped_thread.cpp  scoped_thread.h  thread_pool.cpp  thread_pool.h  thread_pool_balanced_job.cpp  thread_pool_balanced_job.h  thread_pool_with_result.cpp  thread_pool_with_result.h  threadsafe_list.cpp  threadsafe_list.h  threadsafe_lookup_table.cpp  threadsafe_lookup_table.h  threadsafe_queue.cpp  threadsafe_queue.h  threadsafe_stack.cpp  threadsafe_stack.h  util.h
